# osc-transformer-based-extractor

./: .coveragerc  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  README.rst  pyproject.toml  tox.ini
.github/workflows/: bootstrap.yaml  builds.yaml  codeql.yml  dependencies.yaml  documentation.yaml  linting.yaml  release.yaml  repository.yaml  security.yaml  test-release.yaml  testing.yaml
demo/kpi_answering/inference_demo/: inference_kpi_answering.ipynb
demo/kpi_answering/training_demo/: training_kpi_answering.ipynb
demo/relevance_detector/data/: annotations_training.xlsx  output_curator.csv
demo/relevance_detector/training_demo/: train_sentence_transformer.ipynb
demo/training_demo/: train_sentence_transformer.ipynb
docs/: conf.py  index.rst
scripts/: template-to-repo.sh
src/PYTESTS/: test_inference.py  test_make_training_data_from_curator.py
src/osc-transformer-based-extractor/: inference.py  inference_demo.ipynb  make_training_data_from_curator.py
src/osc-transformer-based-extractor/OSC/: result.json
src/osc-transformer-based-extractor/data/: train_data.csv
src/osc_data_extractor/: __init__.py  skeleton.py
src/osc_transformer_based_extractor/: README.md  __init__.py  cli.py  fine_tune.py  inference.py  inference_demo.ipynb  main.py  main_cli.py  make_training_data_from_curator.py  tp.ipynb
src/osc_transformer_based_extractor/OSC/: kpi_mapping.csv
src/osc_transformer_based_extractor/kpi_answering/: cli_kpi_answering.py  inference_kpi_answering.py  train_kpi_answering.py
src/osc_transformer_based_extractor/kpi_detection/: __init__.py  cli_kpi_detection.py  inference_kpi_detection.py  train_kpi_detection.py
src/osc_transformer_based_extractor/relevance_detector/: cli_relevance_detector.py  fine_tune.py  inference.py
src/pytests/: tess.py  test_fine_tune.py  test_make_training_data_from_curator.py
src/pytests2/: tess.py  test_inference.py
src/relevance_detector/: README.md  fine_tune.py  inference.py  make_sample_training_data.ipynb  make_training_data_from_curator.py  train_sentence_transformer.ipynb  train_sentence_transformer.py
tests/: conftest.py  osc_data_extractor_test.py  test_cli.py  test_inference.py  test_main.py
tests/kpi_answering/: test_cli_kpi_answering.py  test_inference_kpi_answering.py
tests/osc_transformer_based_extractor/: test_main_cli.py
tests/osc_transformer_based_extractor/kpi_detection/: test_cli_kpi_detection.py  test_inference_kpi_detection.py
tests/osc_transformer_based_extractor/relevance_detector/: test_cli_relevance_detector.py  test_inference.py
tests/relevance_detector/: test_cli_relevance_detector.py  test_fine_tune.py  test_inference.py
